--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-vendor/.bundle
+/vendor/.bundle
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
